--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -49,6 +49,15 @@ steps:
     arguments: pack Rx.NET/Source/facades/System.Reactive.Compatibility.nuspec -Version $(NBGV_NuGetPackageVersion) -MinClientVersion 2.12 -NoPackageAnalysis -outputdirectory $(Build.ArtifactStagingDirectory)\artifacts
   condition: eq(variables['system.pullrequest.isfork'], false)
 
+- task: MSBuild@1
+  displayName: Build for Test (ppdb) workaround
+  inputs:
+    solution: Rx.NET/Source/System.Reactive.sln    
+    msbuildArguments: /t:build /p:DebugType=portable
+    platform: $(BuildPlatform)
+    configuration: $(BuildConfiguration)
+    maximumCpuCount: true
+
 - task: DotNetCoreCLI@2
   inputs:
     command: test
