--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -81,6 +81,14 @@ steps:
     summaryFileLocation: '$(Build.SourcesDirectory)/Ix.NET/Source/coverlet/reports/Cobertura.xml'
     reportDirectory: '$(Build.SourcesDirectory)/Ix.NET/Source/coverlet/reports'
 
+- script: |
+    choco install codecov
+    codecov -f $(Build.SourcesDirectory)/Ix.NET/Source/coverlet/reports/Cobertura.xml
+  env:
+    CODECOV_TOKEN: $(CODECOV_TOKEN)
+  displayName: Upload coverage to Codecov
+  condition: and(succeeded(), not(eq(variables['CODECOV_TOKEN'], '')))
+
 - task: PowerShell@2
   displayName: Authenticode Sign Packages
   inputs:
