--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -83,7 +83,7 @@ steps:
 
 - script: |
     choco install codecov
-    codecov -f $(Build.SourcesDirectory)/Ix.NET/Source/coverlet/reports/Cobertura.xml
+    codecov -f $(Build.SourcesDirectory)/Ix.NET/Source/coverlet/reports/Cobertura.xml -F ixnet
   env:
     CODECOV_TOKEN: $(CODECOV_TOKEN)
   displayName: Upload coverage to Codecov
