--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -23,7 +23,7 @@ pr:
 jobs:
 - job: Build
   pool:
-    vmImage: vs2017-win2016
+    vmImage: windows-2019
 
   variables: 
     BuildConfiguration: Release
