--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -32,7 +32,7 @@ jobs:
   steps:
   - task: DotNetCoreInstaller@0
     inputs:
-      version: '3.0.100-preview-010184'
+      version: '3.0.100-preview4-010374'
 
   - task: DotNetCoreCLI@2  
     inputs:
